# ghost-core

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: collection.cpp  collection.hpp  object.cpp  object.hpp  object_property_base.hpp  object_property_int.cpp  object_property_int.hpp  property.cpp  property.hpp
test/: CMakeLists.txt  collection-test.cpp  main.cpp
